--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,6 +1,5 @@
-/*
- *= require_self
- */
+//= require_self
+
 @import "helpers"
 *
   padding: 0
@@ -26,3 +25,4 @@ img
 
 section, article, header, footer
   display: block
+
