added in some simple form and bootstrap stuff

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,14 +1,47 @@
 !!! 5
-%html
+%html(lang="en")
   %head
-    %title My Best Drink
-    = stylesheet_link_tag "application", :media => "all"
+    %meta(charset="utf-8")
+    %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
+    %meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    %title= content_for?(:title) ? yield(:title) : "Mybestdrink"
     = csrf_meta_tags
+    /[if lt IE 9]
+      = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
+    = stylesheet_link_tag "application", :media => "all"
+
+
   %body
-    #wrap
-      %header#pagehead
-        what's in yo head... in yo head.... nothing.
-      %section= yield
-      %footer#pagefoot
-        mah foot, yo!
+    .navbar.navbar-fixed-top
+      .navbar-inner
+        .container
+          %a.btn.btn-navbar(data-target=".nav-collapse" data-toggle="collapse")
+            %span.icon-bar
+            %span.icon-bar
+            %span.icon-bar
+          %a.brand(href="#") Mybestdrink
+          .container.nav-collapse
+            %ul.nav
+              %li= link_to "Link 1", "/path1"
+              %li= link_to "Link 2", "/path2"
+              %li= link_to "Link 3", "/path3"
+
+    .container
+
+      .content
+        .row
+          .span9
+            = bootstrap_flash
+            = yield
+          .span3
+            .well.sidebar-nav
+              %h3 Sidebar
+              %ul.nav.nav-list
+                %li.nav-header Sidebar
+                %li= link_to "Link 1", "/path1"
+                %li= link_to "Link 2", "/path2"
+                %li= link_to "Link 3", "/path3"
+    
+      %footer
+        %p &copy; Company 2012
     = javascript_include_tag "application"
