--- a/app/views/drinks/_form.html.haml
+++ b/app/views/drinks/_form.html.haml
@@ -1,1 +1,4 @@
-= simple_form_for(@user, :html => {:class => 'form-horizontal' }) do |form|
+= simple_form_for(@drink, :html => {:class => 'form-horizontal' }) do |f|
+  = f.input(:name)
+  
+  = f.submit(:class => 'btn btn-info')
