planning out home page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,12 +19,12 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.brand(href="#") Mybestdrink
+          %a.brand(href="#{root_path}") My Best Drink
           .container.nav-collapse
             %ul.nav
-              %li= link_to "Link 1", "/path1"
-              %li= link_to "Link 2", "/path2"
-              %li= link_to "Link 3", "/path3"
+              %li= link_to "Utensils", "/path1"
+              %li= link_to "Mixologists", users_path
+              %li= link_to "Drinks", drinks_path
 
     .container
 
