--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -1,1 +1,16 @@
 %h1 RAILS RUMBLE!!! O_o zomg
+
+%h3 Most Popular
+%p Most "likes" total
+
+%h3 Trending
+%p most "likes" in past 2hours
+
+%h3 Recently Mixed
+%p last 6 added
+
+%h3 Classics
+%p we create an index of what the classics are
+
+%h3 Star Mixologists
+%p mixologists with with most high rated drinks
