--- a/app/views/ratings/index.html.haml
+++ b/app/views/ratings/index.html.haml
@@ -9,9 +9,9 @@
   - @ratings.each do |rating|
     %tr
       %td= link_to 'Show', rating
-      %td= link_to 'Edit', edit_rating_path(rating)
+      %td= link_to 'Edit', edit_drink_rating_path(@drink, rating)
       %td= link_to 'Destroy', rating, method: :delete, data: { confirm: 'Are you sure?' }
 
 %br
 
-= link_to 'New Rating', new_rating_path
+= link_to 'New Rating', new_drink_rating_path(@drink)
