--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,10 +22,16 @@
           %a.brand(href="#{root_path}") My Best Drink
           .container.nav-collapse
             %ul.nav
-              %li= link_to "Utensils", "/path1"
-              %li= link_to "Mixologists", users_path
+              %li= link_to "Utensils", wares_path
+              %li= link_to "Mixologists", mixologists_path
               %li= link_to "Drinks", drinks_path
-
+            %ul.pull-right
+              - if current_user.anonymous?
+                %li= link_to "Register", new_user_registration_path
+                %li= link_to "Sign in", new_user_session_path
+              -else
+                / %li= link_to "Register", new_user_registration_path
+                %li= link_to "Sign out", destroy_user_session_path
     .container
 
       .content
