adding in the wares section

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -27,3 +27,16 @@ img
 section, article, header, footer
   display: block
 
+ul.sort-actions
+  list-style: none
+  
+ul#sort-grid.wares
+  list-style: none
+  .ware
+    h3
+      font-size: 16px
+      font-size: normal
+      margin: 2px
+      line-height: 18px
+      a
+        
