--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,7 +22,7 @@
           %a.brand(href="#{root_path}") My Best Drink
           .container.nav-collapse
             %ul.nav
-              %li= link_to "Utensils", "/path1"
+              %li= link_to "Learn", wares_path
               %li= link_to "Mixologists", users_path
               %li= link_to "Drinks", drinks_path
 
