--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,10 +28,10 @@
             %ul.pull-right
               - if current_user.anonymous?
                 %li= link_to "Register", new_user_registration_path
-                %li= link_to "Sign in", new_user_session_path
+                %li= link_to "Sign in", sign_in_path
               -else
                 / %li= link_to "Register", new_user_registration_path
-                %li= link_to "Sign out", destroy_user_session_path
+                %li= link_to "Sign out", sign_out_path
     .container
 
       .content
