Popular and trending drinks.

--- a/app/views/drinks/show.html.haml
+++ b/app/views/drinks/show.html.haml
@@ -2,6 +2,9 @@
 
 %p= @drink.glass
 
+%p== Likes #{@drink.likes.count}
+%p== Dislikes #{@drink.dislikes.count}
+
 %ul
   - @drink.ingredients.each do |ingredient|
     %li= ingredient
