--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -7,7 +7,7 @@
   margin: 0
 
 body
-  background-color: $white
+  background-color: $black
   color: $black
   font-size: 14px
   font-family: Helvetica, sans-serif
@@ -39,4 +39,25 @@ ul#sort-grid.wares
       margin: 2px
       line-height: 18px
       a
-        
+
+.box
+  @include background-gradient(darken($white, 5%), $white)
+  padding: 5px
+  color: $black
+  margin-bottom: 15px
+  box-shadow: 0 0 5px 0 lighten($black, 15%)
+  border-radius: 2px
+  h3
+    position: relative
+    left: -15px
+    background-color: $brown
+    text-shadow: 1px 1px 0 darken($white, 10%)
+    color: lighten($black, 10%)
+    padding: 2px 0 2px 12px
+    margin: 0 0 20px 0
+    font-size: 16px
+    font-weight: normal
+    line-height: 18px
+    box-shadow: 2px 2px 5px 0 lighten($black, 15%)
+    
+    
