god.... what did I change....

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -33,6 +33,11 @@ ul.sort-actions
 ul#sort-grid.wares
   list-style: none
   .ware
+    float: left
+    height: 240px
+    width: 205px
+    overflow: hidden
+    margin-left: 10px
     h3
       font-size: 16px
       font-size: normal
