changed out faye gem. live feed is now working, but still needs cleanup

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -52,4 +52,5 @@
     
       %footer
         %p &copy; MyBestDrink.com 2012
+    = javascript_include_tag "#{FAYE_URL}.js"
     = javascript_include_tag "application"
