--- a/app/views/shared/_feed.html.haml
+++ b/app/views/shared/_feed.html.haml
@@ -1,6 +1,4 @@
 .box.sidebar-nav
   %h3 Feed
-  %ul.nav.nav-list
-    %li Bobby liked #{link_to('Cool Drink', '')}
-    %li Russ commented on #{link_to("Judd's", '')} Profile
-    %li Sally is a lush.
+  %ul.nav.nav-list.feed
+    
