--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,7 +23,7 @@
           .container.nav-collapse
             %ul.nav
               %li= link_to "Learn", wares_path
-              %li= link_to "Mixologists", mixologists_path
+              %li= link_to "Mixologists", users_path
               %li= link_to "Drinks", drinks_path
             %ul.nav.pull-right
               - if current_user.anonymous?
