--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,7 +1,7 @@
 %section.box
   %h1 Mixologist #{@user.name}
-  
+
   %h3 My best drinks
   %ul
     - @user.drinks.each do |drink|
-      %li= drink.name
+      %li= link_to(drink.name, drink)
