Front page catches.

--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -20,8 +20,9 @@
     .drink
       .name= link_to(drink.name, drink)
 
-.box
-  %h3 Star Mixologists
-  - @star_mixologists.each do |mixologist|
-    .mixologist
-      .email= link_to(mixologist.name, mixologist)
+- unless @star_mixologists.empty?
+  .box
+    %h3 Star Mixologists
+    - @star_mixologists.each do |mixologist|
+      .mixologist
+        .email= link_to(mixologist.name, mixologist)
