--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,6 +1,8 @@
 %section.box
   %h1 Our Mixologists
-  
+
   %ul
     - @users.each do |user|
       %li= link_to(user.name, user)
+
+  = will_paginate(@users)
