--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,7 +34,8 @@
                   = link_to("My Account <b class='caret'></b>".html_safe, '', class: 'dropdown-toggle', 'data-toggle' => "dropdown")
                   %ul.dropdown-menu
                     %li= link_to "My Drinks", user_drinks_path
-                    %li= link_to "My Profile", edit_user_registration_path
+                    %li= link_to "My Profile", user_path(current_user)
+                    %li= link_to "Edit My Profile", edit_user_registration_path
                     %li= link_to "Sign out", sign_out_path
 
     .container
@@ -48,8 +49,8 @@
             = bootstrap_flash
             = yield
           .span3
-            = render('shared/feed')
-    
+            = render('feeds/feed', events: TimelineEvent.limit(6))
+
       %footer
         %p &copy; MyBestDrink.com 2012
     = javascript_include_tag "application"
