--- a/app/assets/stylesheets/helpers.css.sass
+++ b/app/assets/stylesheets/helpers.css.sass
@@ -1,8 +1,13 @@
+@import url("http://fonts.googleapis.com/css?family=Medula+One")
+
 $white: #ffffff
 $black: #000000
 $red: #DF5858
-$brown: #AD741E
+$brown: #c79c5b
 $blue: #547DD6
+$light_green: #5d6965
+$dark_green: #4d5a54
+$yellow: #dbdaa0
 
 @mixin background-gradient($color_from, $color_to)
   background-color: $color_to
