--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,43 +6,38 @@
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
     %title= content_for?(:title) ? yield(:title) : "Mybestdrink"
     = csrf_meta_tags
+    :javascript
+      var bg = new Image();
+      bg.src = '#{asset_path("background.jpg")}';
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
     = stylesheet_link_tag "application", :media => "all"
 
-
   %body
-    .navbar.navbar-fixed-top
-      .navbar-inner
-        .container
-          %a.btn.btn-navbar(data-target=".nav-collapse" data-toggle="collapse")
-            %span.icon-bar
-            %span.icon-bar
-            %span.icon-bar
-          %a.brand(href="#{root_path}") My Best Drink
-          .container.nav-collapse
-            %ul.nav
-              %li= link_to "Learn", wares_path
-              %li= link_to "Mixologists", users_path
-              %li= link_to "Drinks", drinks_path
-            %ul.nav.pull-right
-              - if current_user.anonymous?
-                %li= link_to "Register", new_user_registration_path
-                %li= link_to "Sign in", sign_in_path
-              -else
-                %li.dropdown
-                  = link_to("My Account <b class='caret'></b>".html_safe, '', class: 'dropdown-toggle', 'data-toggle' => "dropdown")
-                  %ul.dropdown-menu
-                    %li= link_to "My Drinks", user_drinks_path
-                    %li= link_to "My Profile", edit_user_registration_path
-                    %li= link_to "Sign out", sign_out_path
-
-    .container
-      .content
-        .row
-          .span12
-            = simple_form_for(:drink, url: '/search', method: :get) do |f|
-              = f.input(:name, url: autocomplete_drink_name_drinks_path, as: :autocomplete, input_html: { 'data-delimiter' => ',' })
+    %header.white-bar
+      %nav.mainnav.fancy
+        .leftnav.align-right
+          = link_to('Drinks', drinks_path)
+          = link_to('Learn', wares_path)
+          = link_to('Mixologists', users_path)
+        .mainicon.center
+          = link_to(image_tag('mbd-icon.png'), root_path)
+        .rightnav
+          - if current_user.anonymous?
+            = link_to('Sign in', sign_in_path)
+            = link_to('Register', new_user_registration_path)
+            = link_to('About', '')
+          - else
+            = link_to('My Drinks', user_drinks_path)
+            = link_to('My Profile', edit_user_registration_path)
+            = link_to('Sign out', sign_out_path)
+        %br{:clear => 'all'}
+    .main.container
+      .logo-search.center
+        .big-water-ring &nbsp;
+        = render('shared/search')
+        = link_to(image_tag('logo.png'), root_path, :id => 'logo')
+      .body.content
         .row
           .span9
             = bootstrap_flash
@@ -50,6 +45,6 @@
           .span3
             = render('shared/feed')
     
-      %footer
-        %p &copy; MyBestDrink.com 2012
+    %footer.fancy.center.white-bar
+      %p www.MyBestDrink.com
     = javascript_include_tag "application"
