--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -49,7 +49,7 @@ section, article, header, footer
   position: absolute
   z-index: 1
   top: 130px
-  left: -10px
+  left: -55px
 // HEADER
 header
   nav.mainnav
@@ -157,27 +157,41 @@ ul#sort-grid.wares
       a
 .box
   @include background-gradient(darken($white, 5%), $white)
-  padding: 5px
+  padding: 10px 5px
   color: $black
-  margin-bottom: 15px
+  margin-bottom: 25px
   box-shadow: 0 0 5px 0 lighten($black, 15%)
   border-radius: 2px
   h3
     position: relative
-    left: -15px
+    left: -27px
     background-color: $brown
-    text-shadow: 1px 1px 0 darken($white, 10%)
-    color: lighten($black, 10%)
+    color: $white
     padding: 2px 0 2px 12px
     margin: 0 0 20px 0
-    font-size: 16px
+    font-size: 18px
     font-weight: normal
     line-height: 18px
     box-shadow: 2px 2px 5px 0 lighten($black, 15%)
-
+    width: 170px
+    font-family: 'Medula One', cursive
+    letter-spacing: 0.08em
+    &:before
+      content: ""
+      display: block
+      background-image: url(asset-path('flag-corner.png', image))
+      background-repeat: no-repeat
+      width: 22px
+      height: 15px
+      position: absolute
+      left: 0px
+      top: 22px
+.drink
+  min-height: 190px
 // FOOTER
 footer
   margin-top: 40px
+  margin-bottom: 60px
   padding: 40px 0
   font-size: 20px
   color: $white
