--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,6 +44,7 @@
             = yield
           .span3
             = render('feeds/feed', events: TimelineEvent.limit(6))
+            = yield(:sidebar)
     %footer.fancy.center.white-bar
       %p www.MyBestDrink.com
     = javascript_include_tag "application"
