fixing style bug

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -186,7 +186,7 @@ ul#sort-grid.wares
       position: absolute
       left: 0px
       top: 22px
-.drink
+.drinkbox
   min-height: 190px
 // FOOTER
 footer
