--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -2,21 +2,21 @@
   %h3 Most Popular Drinks
   .row
     - @popular_drinks.each do |drink|
-      .drink.span2.center
+      .drinkbox.span2.center
         = link_to(image_tag('http://placehold.it/140x140', :class => 'img-polaroid'), drink)
         = link_to(drink.name, drink)
 .box
   %h3 Up And Coming
   .row
     - @trending_drinks.each do |drink|
-      .drink.span2.center
+      .drinkbox.span2.center
         = link_to(image_tag('http://placehold.it/140x140', :class => 'img-polaroid'), drink)
         = link_to(drink.name, drink)
 .box
   %h3 Recently Mixed
   .row
     - @recent_drinks.each do |drink|
-      .drink.span2.center
+      .drinkbox.span2.center
         = link_to(image_tag('http://placehold.it/140x140', :class => 'img-polaroid'), drink)
         = link_to(drink.name, drink)
 
@@ -25,7 +25,8 @@
     %h3 The Classics
     .row
       - @classic_drinks.each do |drink|
-        .drink
+        .drinkbox.span2.center
+          = link_to(image_tag('http://placehold.it/140x140', :class => 'img-polaroid'), drink)
           .name= link_to(drink.name, drink)
 
 - unless @star_mixologists.empty?
