--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -63,7 +63,7 @@ header
       width: 310px
       a
         display: inline-block
-        margin-left: 50px
+        margin-left: 45px
         padding-right: 10px 
     .mainicon
       float: left
@@ -78,7 +78,8 @@ header
         display: inline-block
     a
       color: #ffffff
-      font-size: 20px
+      font-size: 18px
+      letter-spacing: 0.08em
       &:hover
         color: $yellow
 
