--- a/app/views/drinks/index.html.haml
+++ b/app/views/drinks/index.html.haml
@@ -1,7 +1,6 @@
-%h1 Drinks!!!!
-
-%ul
-  - @drinks.each do |drink|
-    %li= link_to(drink.name, drink_path(drink))
-
+%section.box
+  %h1.page-header Drinks!!
+  
+= render('drinks', :title => 'All Drinks', :drink_collection => @drinks)
+  
 = will_paginate(@drinks)
