--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,7 +26,7 @@
           - if current_user.anonymous?
             = link_to('Sign in', sign_in_path)
             = link_to('Register', new_user_registration_path)
-            = link_to('About', '')
+            = link_to('About', about_path)
           - else
             = link_to('My Drinks', user_drinks_path)
             = link_to('My Profile', edit_user_registration_path)
