--- a/app/assets/stylesheets/helpers.css.sass
+++ b/app/assets/stylesheets/helpers.css.sass
@@ -1,4 +1,5 @@
 @import url("http://fonts.googleapis.com/css?family=Medula+One")
+@import url("http://fonts.googleapis.com/css?family=Rye")
 
 $white: #ffffff
 $black: #000000
