--- a/app/views/drinks/_drinks.html.haml
+++ b/app/views/drinks/_drinks.html.haml
@@ -2,6 +2,10 @@
   %h3= title
   .row
     - drink_collection.each do |drink|
-      .drinkbox.span2.center
-        = link_to(image_tag('http://placehold.it/140x140', :class => 'img-polaroid'), drink)
-        = link_to(drink.name, drink)
+      .drinkbox
+        = link_to(image_tag('http://placehold.it/140x140'), drink)
+        .name= link_to(drink.name, drink)
+        .meta-data
+          %i.icon-thumbs-up== &nbsp; #{drink.likes.count} Likes
+          &nbsp;
+          %i.icon-thumbs-down== &nbsp; #{drink.dislikes.count} Dislikes
