--- a/app/views/admin/wares/_form.html.haml
+++ b/app/views/admin/wares/_form.html.haml
@@ -4,4 +4,4 @@
   = f.input(:photo)
   = f.input(:description, :input_html => {:rows => 10})
   
-  = f.submit(:class => 'btn btn-info')
+  = f.submit(submit_tag, :class => 'btn btn-info')
