--- a/app/views/user/drinks/_form.html.haml
+++ b/app/views/user/drinks/_form.html.haml
@@ -1,13 +1,17 @@
 = simple_form_for([:user, @drink], html: {class: 'form-horizontal', multipart: true}) do |f|
   = f.input :name
-  = f.input :glass
+  = f.simple_fields_for(:ware) do |w|
+    = w.input :ware, label: "Glassware", :collection => Ware.glassware.all(:order => 'name'), :prompt => "Preferred glassware"
+
   = f.input :description
   = f.input :instructions
   = f.input :photo
 
-  = f.simple_fields_for(:ingredients) do |ing_f|
-    = ing_f.input :name
-    = ing_f.input :amount
-    = ing_f.input :unit
+  = f.simple_fields_for(:ingredients) do |i|
+    = i.input :name
+
+    = i.simple_fields_for(:components) do |i|
+      = i.input :amount
+      = i.input :unit
 
   = f.submit
