--- a/app/views/ratings/update_page.js.erb
+++ b/app/views/ratings/update_page.js.erb
@@ -1,7 +1,2 @@
-<% if @feeling.to_i == -1 %>
-var count = parseInt($('.count.dislikes').text(), 10);
-$('.count.dislikes').text(count + 1);
-<% else %>
-var count = parseInt($('.count.likes').text(), 10);
-$('.count.likes').text(count + 1);
-<% end %>
+$('.likes').text(<%= @drink.likes.count %>);
+$('.dislikes').text(<%= @drink.dislikes.count %>);
