--- a/app/views/feeds/_new_connection.html.haml
+++ b/app/views/feeds/_new_connection.html.haml
@@ -1,4 +1,14 @@
 .event
-  %h4.type Follow
-  %p.description== #{link_to(event.actor.display_name, event.actor)} followed #{link_to(event.secondary_subject.display_name, event.secondary_subject)}
-  %p.timeago== #{time_ago_in_words(event.created_at)} ago
+  %p.photo
+    = link_to(image_tag('http://placehold.it/50x50', class: 'drink-photo'), event.secondary_subject)
+
+  %p.description
+    %strong== #{link_to(event.secondary_subject.display_name, event.secondary_subject)}
+    %br
+    == Followed by #{link_to(event.actor.display_name, event.actor)}
+
+  %p.timeago
+    %i.icon-time
+    == #{time_ago_in_words(event.created_at)} ago
+
+  .clear
