--- a/app/views/feeds/_new_drink.html.haml
+++ b/app/views/feeds/_new_drink.html.haml
@@ -1,4 +1,14 @@
 .event
-  %h4.type New Drink
-  %p.description== #{link_to(event.subject.name, event.subject)} Mixed by #{link_to(event.actor.display_name, event.actor)}
-  %p.timeago== #{time_ago_in_words(event.created_at)} ago
+  %p.photo
+    = link_to(image_tag('http://placehold.it/50x50', class: 'drink-photo'), event.subject)
+
+  %p.description
+    %strong== #{link_to(event.subject.name, event.subject)}
+    %br
+    %span.meta-data Mixed by #{link_to(event.actor.display_name, event.actor)}
+
+  %p.timeago
+    %i.icon-time
+    == #{time_ago_in_words(event.created_at)} ago
+
+  .clear
