--- a/app/views/feeds/_new_user.html.haml
+++ b/app/views/feeds/_new_user.html.haml
@@ -1,4 +1,14 @@
 .event
-  %h4.type New User
-  %p.description== #{link_to(event.actor.name, event.actor.display_name)}
-  %p.timeago== #{time_ago_in_words(event.created_at)} ago
+  %p.photo
+    = link_to(image_tag('http://placehold.it/50x50', class: 'drink-photo'), event.subject)
+
+  %p.description
+    %strong== #{link_to(event.subject.display_name, event.subject)} Joined
+    %br
+    Welome!
+
+  %p.timeago
+    %i.icon-time
+    == #{time_ago_in_words(event.created_at)} ago
+
+  .clear
