--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -19,7 +19,14 @@ body
   color: $black
   font-size: 14px
   font-family: Helvetica, sans-serif
-  
+
+.container
+  width: 1024px
+
+.sidebar
+  margin-left: 50px
+  width: 270px
+
 ul, ol
   margin-left: 20px
 a
@@ -91,7 +98,7 @@ header
   #logo
     display: block
     width: 377px
-    margin-left: 400px
+    margin-left: 320px
   .search
     width: 250px
     margin-top: 70px
@@ -134,7 +141,7 @@ header
   overflow-y: auto
   overflow-x: hidden
   width: 350px !important
-  box-shadow: 0 5px 5px -3px lighten($black, 10%)
+  box-shadow: 0 5px 5px -3px rgba(0,0,0,.5)
   border-radius: 2px
   li
     cursor: pointer
@@ -172,7 +179,7 @@ ul#sort-grid.wares
   padding: 10px 5px
   color: $black
   margin-bottom: 25px
-  box-shadow: 0 0 5px 0 lighten($black, 15%)
+  box-shadow: 0 0 5px 0 rgba(0,0,0,.25)
   border-radius: 2px
   h3
     position: relative
@@ -184,8 +191,8 @@ ul#sort-grid.wares
     font-size: 22px
     font-weight: normal
     line-height: 18px
-    box-shadow: 2px 2px 5px 0 lighten($black, 80%)
-    text-shadow: 0 1px 4px lighten($black, 50%)
+    box-shadow: 2px 2px 5px 0 rgba(0,0,0,.25)
+    text-shadow: 0 1px 4px rgba(0,0,0,.25)
     width: 250px
     font-family: 'Medula One', cursive
     letter-spacing: 0.08em
