--- a/app/assets/stylesheets/feed.css.sass
+++ b/app/assets/stylesheets/feed.css.sass
@@ -7,11 +7,13 @@
     margin-bottom: 10px
 
     p.description
-      font-size: 12px
+      font-size: 11px
+      line-height: 16px
       margin: 0
 
       span.meta-data
         color: #777
+        font-size: 10px
 
     p.timeago
       font-size: 11px
@@ -19,4 +21,4 @@
 
     p.photo
       float: right
-      margin: 5px 3px 0 0
+      margin: 5px 3px 0 10px
