--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -2,7 +2,7 @@
   = image_tag(resource.photo_url, class: 'pull-right') if resource.photo?
 
   %h2 
-    = "Edit #{resource_name.to_s.humanize}"
+    = "#{current_user.name}"
 
   = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, class: 'form-horizontal' }) do |f|
     = f.error_notification
@@ -10,7 +10,7 @@
     .form-inputs
       = f.input :name 
       = f.input :photo 
-      = f.input :remote_photo_url, placeholder: "or image URL"
+      = f.input :remote_photo_url, label: 'Photo URL', placeholder: "or past the url of a photo"
 
       = f.input :email, :required => true, :autofocus => true 
       = f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false 
