--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
             = link_to('About', about_path)
           - else
             = link_to('My Drinks', user_drinks_path)
-            = link_to('My Profile', edit_user_registration_path)
+            = link_to('Profile', edit_user_registration_path)
             = link_to('Sign out', sign_out_path)
         %br{:clear => 'all'}
     .main.container
