--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,36 +1,41 @@
 %section.box
-  %h1 Mixologist #{@user.name}
+  %h3
+    = @user.name
+    %i.icon-glass
 
-  - if !current_user.anonymous? && current_user != @user && !current_user.follows?(@user)
-    %p= link_to('Follow', user_connections_path(@user), method: :post, remote: true, class: 'btn btn-success')
+    - if !current_user.anonymous? && current_user != @user && !current_user.follows?(@user)
+      = link_to('Follow', user_connections_path(@user), method: :post, remote: true)
 
-  - if current_user.follows?(@user)
-    %p= link_to('Unfollow', user_connection_path(current_user, @user), method: :delete, remote: true, class: 'btn btn-danger')
-
-  %h3 My best drinks
-  %ul
-    - @drinks.each do |drink|
-      %li= link_to(drink.name, drink)
-
-  = will_paginate(@drinks)
+    - if current_user.follows?(@user)
+      = link_to('Unfollow', user_connection_path(current_user, @user), method: :delete, remote: true)
 
   - unless @user.followings.empty?
-    %h3 Following
-    %ul
-      - @user.followings.each do |connection|
-        %li= link_to(connection.destination.display_name, connection.destination)
+    .span2
+      %h3 Following
+      %ul
+        - @user.followings.each do |connection|
+          %li= link_to(connection.destination.display_name, connection.destination)
 
   - unless @user.followers.empty?
-    %h3 Followers
-    %ul
-      - @user.followers.each do |connection|
-        %li= link_to(connection.source.display_name, connection.source)
+    .span2
+      %h4 Followers
+      %ul.unstyled
+        - @user.followers.each do |connection|
+          %li= link_to(connection.source.display_name, connection.source)
 
   - if current_user == @user && !@user.friends.empty?
-    %h3 Friends
-    %ul
-      - @user.friends.each do |connection|
-        %li= link_to(connection.source.display_name, connection.source)
+    .span2
+      %h3 Friends
+      %ul
+        - @user.friends.each do |connection|
+          %li= link_to(connection.source.display_name, connection.source)
 
-- if current_user == @user
-  = render('feeds/feed', events: @user.activity_feed.limit(50))
+  .clear
+
+= render('drinks/drinks', title: 'My Best Drinks', drink_collection: @drinks)
+= will_paginate(@drinks)
+
+%sectino.box
+  - if current_user == @user
+    %h3 Activity
+    = render('feeds/feed', events: @user.activity_feed.limit(50))
