--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -214,7 +214,7 @@ img.drink-photo
   margin: 0 3px 10px
   box-shadow: 0 0 0 5px white, 0 0 0 6px lighten($brown, 25%)
 
-.drinkbox
+.drinkbox, .userbox
   display: inline-block
   vertical-align: top
   max-width: 145px
