--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,30 +1,25 @@
 .box
-  = image_tag(resource.photo_url, class: 'pull-right') if resource.photo?
+  %h3= current_user.name
 
-  %h2 
-    = "#{current_user.name}"
+  = image_tag(resource.photo_url, class: 'pull-right') if resource.photo?
 
   = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, class: 'form-horizontal' }) do |f|
     = f.error_notification
 
     .form-inputs
-      = f.input :name 
-      = f.input :photo 
+      = f.input :name
+      = f.input :photo
       = f.input :remote_photo_url, label: 'Photo URL', placeholder: "or past the url of a photo"
-
-      = f.input :email, :required => true, :autofocus => true 
-      = f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false 
-      = f.input :password_confirmation, :required => false 
-      = f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true 
+      = f.input :email, :required => true, :autofocus => true
+      = f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false
+      = f.input :password_confirmation, :required => false
+      = f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true
 
     .form-actions
-      = f.button :submit, "Update" 
+      = f.button :submit, "Update"
 
   %h3 Cancel my account
 
-  %p 
+  %p
     Unhappy?
     = link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete
-
-    = link_to "Back", :back
-
