--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -48,6 +48,7 @@ section, article, header, footer
 .center
   text-align: center
 .fancy
+  padding-top: 5px
   font-family: 'Medula One', cursive
 .white-bar
   background: transparent url(asset-path('white-bar.png', image)) no-repeat scroll center center
