--- a/app/assets/stylesheets/feed.css.sass
+++ b/app/assets/stylesheets/feed.css.sass
@@ -5,6 +5,8 @@
 
   .event
     margin-bottom: 10px
+    padding-bottom: 5px
+    border-bottom: 1px dotted #ccc
 
     p.description
       font-size: 11px
