fixing production bugs with mobile

--- a/app/views/layouts/application.mobile.haml
+++ b/app/views/layouts/application.mobile.haml
@@ -6,7 +6,7 @@
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
     %title My Best Drink Mobile
     = csrf_meta_tags
-    = stylesheet_link_tag 'mobile'
+    = stylesheet_link_tag 'mobile', :media => "screen"
   %body
     #wrap(data-role="page")
       #header(data-role="header")
