--- a/app/views/drinks/show.html.haml
+++ b/app/views/drinks/show.html.haml
@@ -32,3 +32,5 @@
     = glass_image_for_drink(@drink)
 
   .clear
+
+= render('drinks/drinks', title: 'Related Drinks', drink_collection: @related_drinks.results)
