--- a/app/views/user/drinks/index.html.haml
+++ b/app/views/user/drinks/index.html.haml
@@ -1,5 +1,5 @@
-/ %section.box
-/   .pull-right
-/     = link_to('Add Drink', new_user_drink_path, class: 'btn btn-success')
+%section.box
+  .pull-right
+    = link_to('Add Drink', new_user_drink_path, class: 'btn btn-success')
 
 = render('drinks/drinks', title: 'My Drinks', drink_collection: @drinks)
