--- a/app/views/layouts/application.mobile.haml
+++ b/app/views/layouts/application.mobile.haml
@@ -10,12 +10,18 @@
   %body
     #wrap(data-role="page")
       #header(data-role="header")
-        %h1 My Best Drink
+        = yield(:header_left)
+        %h1
+          = image_tag('mbd-icon-mobile.png')
+          %span My Best Drink
+        = yield(:header_right)
       = render('shared/search')
       = yield
-      #footer(data-role="footer")
-        = link_to 'Learn Stuff', wares_path
-        = link_to 'All Drinks', drinks_path
-        = link_to 'Mixologists', users_path
+      #footer(data-role="footer" data-position="fixed")
+        %nav(data-role="navbar" data-iconpos="top" role="navigation")
+          %ul
+            %li= link_to 'Learn Stuff', wares_path
+            %li= link_to 'All Drinks', drinks_path
+            %li= link_to 'Mixologists', users_path
         
     = javascript_include_tag 'mobile'
