--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -18,6 +18,11 @@ body {
 // Font Awesome
 @import "fontawesome";
 
+.navbar-fixed-top {
+  background: #1a2320;
+  height: 60px;
+  opacity: 0.9;
+}
 // Your custom LESS stylesheets goes here
 //
 // Since bootstrap was imported above you have access to its mixins which
