--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -210,7 +210,9 @@ ul#sort-grid.wares
 
   .row
     margin-left: 5px
-
+.warebox
+  width: 300px
+  text-align: center
 img.drink-photo
   margin: 0 3px 10px
   box-shadow: 0 0 0 5px white, 0 0 0 6px lighten($brown, 25%)
@@ -260,7 +262,14 @@ h4
   color: $brown
   margin: 0 0 10px
 
-
+.btn-green
+  @include background-gradient($light_green, $dark_green)
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25)
+  color: $white
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25)
+  &:hover
+    color: $white
+    
 // FOOTER
 footer
   margin-top: 40px
