--- a/app/views/wares/index.html.haml
+++ b/app/views/wares/index.html.haml
@@ -1,17 +1,18 @@
 %section.box
-  %h1 Learn Mixology
-
+  %h1.page-header Learn Mixology
+  
   .btn-toolbar
     .btn-group.sort-actions
-      = link_to('All', '#', 'data-value' => 'all', :class => 'btn')
+      = link_to('All', '#', 'data-value' => 'all', :class => 'btn btn-inverse')
       - @categories.each do |ware_cat|
-        = link_to(ware_cat.capitalize, '#', 'data-value' => ware_cat, :class => 'btn')
+        = link_to(ware_cat.capitalize, '#', 'data-value' => ware_cat, :class => 'btn btn-inverse')
 
   .row
     %ul#sort-grid.wares
       - @wares.each do |ware|
         %li.ware(data-kind="#{ware.kind}" data-id="id-#{ware.id}")
-          = link_to(image_tag(ware.photo_url(:thumb)), ware) if ware.photo?
-          %h3= link_to(ware.name, ware)
-          %p= truncate(ware.description, length: 20)
-          %p= ware.kind
+          = link_to(image_tag(ware.photo_url(:thumb), :class => 'img-polaroid'), ware) if ware.photo?
+          %h5
+            = link_to(ware.name, ware)
+            %small click to learn more
+          %p Category: #{ware.kind.capitalize}
