--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,8 +5,8 @@
     <%= f.error_notification %>
 
     <div class="form-inputs">
-      <%= f.input :name %>
-      <%= f.input :email, :required => true, :autofocus => true %>
+      <%= f.input :name, :autofocus => true, :required => true %>
+      <%= f.input :email, :required => true %>
       <%= f.input :password, :required => true %>
       <%= f.input :password_confirmation, :required => true %>
     </div>
