--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,12 +2,12 @@
   %h3
     = @user.name
     %i.icon-glass
-
-    - if !current_user.anonymous? && current_user != @user && !current_user.follows?(@user)
-      = link_to('Follow', user_connections_path(@user), method: :post, remote: true)
-
-    - if current_user.follows?(@user)
-      = link_to('Unfollow', user_connection_path(current_user, @user), method: :delete, remote: true)
+  .pull-right.btn-toolbar
+    .btn-group
+      - if !current_user.anonymous? && current_user != @user && !current_user.follows?(@user)
+        = link_to('<i class="icon-plus"></i> Follow'.html_safe, user_connections_path(@user), method: :post, remote: true, class: 'btn')
+      - if current_user.follows?(@user)
+        = link_to('<i class="icon-ban-circle"></i> Unfollow'.html_safe, user_connection_path(current_user, @user), method: :delete, remote: true, class: 'btn')
 
   - unless @user.followings.empty?
     .span2
@@ -35,7 +35,7 @@
 = render('drinks/drinks', title: 'My Best Drinks', drink_collection: @drinks)
 = will_paginate(@drinks)
 
-%sectino.box
+%section.box
   - if current_user == @user
     %h3 Activity
     = render('feeds/feed', events: @user.activity_feed.limit(50))
